tests/functional/lang/eval-fail-listToAttrs-1.err.exp
error:
       … while calling the 'listToAttrs' builtin
         at /pwd/lang/eval-fail-listToAttrs-1.nix:1:1:
            1| builtins.listToAttrs 1
             | ^
            2|

       … while evaluating the argument passed to builtins.listToAttrs

       error: expected a list but found an integer: 1
